--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,7 @@ h1 {
   font-size: 2.5rem;
   font-weight: 600;
   line-height: 1.2;
-  color: var(--color-charcoal);
+  /* color: var(--color-charcoal); */
   letter-spacing: -0.02em;
 }
 
@@ -34,7 +34,7 @@ h2 {
   font-size: 2rem;
   font-weight: 600;
   line-height: 1.3;
-  color: var(--color-charcoal);
+  /* color: var(--color-charcoal); */
   letter-spacing: -0.01em;
 }
 
@@ -42,13 +42,13 @@ h3 {
   font-size: 1.5rem;
   font-weight: 600;
   line-height: 1.4;
-  color: var(--color-charcoal);
+  /* color: var(--color-charcoal); */
 }
 
 p {
   font-size: 1.0625rem;
   line-height: 1.7;
-  color: var(--color-text-secondary);
+  /* color: var(--color-text-secondary); */
 }
 
 a {
